Time: 4 ms (75.07%), Space: 55.4 MB (24.36%) - LeetHub